fix: Current page title visibility

--- a/style/dark.less
+++ b/style/dark.less
@@ -280,6 +280,16 @@
     display: inline;
   }
 
+  h1#pw-content-title {
+    display: inline-flex;
+    margin: 0.5rem 0 1.2rem 0 !important;
+    padding: .3rem .6rem;
+    background-color: #202020;
+    color: lighten(@global-primary-background, 5%);
+    font-weight: bold;
+    border-radius: 30px;
+  }
+
   //
   // Third party modules override
   //
